2006-06-15 Added scalex and scaley to Axes.autoscale_view to support
           selective autoscaling just the x or y axis, and supported
           these command in plot so you can say plot(something,
           scaley=False) and just the x axis will be autoscaled.
           Modified axvline and axhline to support this, so for
           example axvline will no longer autoscale the y axis. JDH

2006-06-13 Fix so numpy updates are backward compatible - TEO

2006-06-12 Updated numerix to handle numpy restructuring of
           oldnumeric - TEO

2006-06-12 Updated numerix.fft to handle numpy restructuring
           Added ImportError to numerix.linear_algebra for numpy -TEO

2006-06-11 Added quiverkey command to pylab and Axes, using
           QuiverKey class in quiver.py.  Changed pylab and Axes
           to use quiver2 if possible, but drop back to the
           newly-renamed quiver_classic if necessary.  Modified
           examples/quiver_demo.py to illustrate the new quiver
           and quiverkey.  Changed LineCollection implementation
           slightly to improve compatibility with PolyCollection. - EF

2006-06-11 Fixed a usetex bug for windows, running latex on files
           with spaces in their names or paths was failing - DSD

2006-06-09 Made additions to numerix, changes to quiver to make it
           work with all numeric flavors. - EF

2006-06-09 Added quiver2 function to pylab and method to axes,
           with implementation via a Quiver class in quiver.py.
           quiver2 will replace quiver before the next release;
           it is placed alongside it initially to facilitate
           testing and transition. See also
           examples/quiver2_demo.py. - EF

2006-06-08 Minor bug fix to make ticker.py draw proper minus signs
           with usetex - DSD

===============================================================
2006-06-06 Released 0.87.3 at revision 2432

2006-05-30 More partial support for polygons with outline or fill,